--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,17 @@
-<html>
-<head>
-    <title>Swanson Bot</title>
-</head>
-<body>
-  <img src="ron.jpg" alt="Ron Swanson Portret">
-  <h3>Ron Swanson Chatbot</h3>
-</body>
+<!doctype html>
+<html lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Ron Swanson</title>
+        <meta name="description" content="Chat with the man, Ron Swanson">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <!--[if lte IE 9]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+        <![endif]-->
+        <iframe src='https://webchat.botframework.com/embed/bottie-tut?s=l1dMX2q941Y.cwA.WCA.5705OVQZZW-nwPODct7GuJbqoHVV0eY1qEydwcuKgX8'></iframe>
+    </body>
 </html>
